--- a/HTML/medical-records-admin.html
+++ b/HTML/medical-records-admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="medical-records-admin.css">
+    <link rel="stylesheet" href="../CSS/medical-records-admin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="icon" href="medical-logo.jpg" type="image/icon type">
@@ -61,11 +61,11 @@
 
                     <hr class="my-4 mt-1 mb-1">
 
-                    <div class="row g-3">
-                        <div class="col-6">
-                            <h5 class="align-middle">Search By Medical Record Number:</h5>
+                    <div class="row align-items-center g-3 mb-1">
+                        <div class="col-7">
+                            <h5>Search By Medical Record Number:</h5>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <input type="text" class="form-control" id="firstName" placeholder="###########" value="" required>
                         </div>
                         <div class="col-2">
@@ -73,9 +73,17 @@
                         </div>
                     </div>
 
-                    <hr class="my-4 mt-1 mb-1">
+                    <hr class="my-4 mt-1 mb-3">
 
-                    <h5>Patient Information</h5>
+                    <div class="row align-items-center g-3 mb-1">
+                        <div class="col-2"></div>
+                        <div class="col-8">
+                            <h5>Patient Information</h5>
+                        </div>
+                        <div class="col-2">
+                            <button type="button" class="btn">Edit</button>
+                        </div>
+                    </div>
 
                     <table class="table table-bordered">
                         <tbody>
@@ -122,7 +130,15 @@
                         </tbody>
                     </table>
 
-                    <h5>Medical History</h5>
+                    <div class="row align-items-center g-3 mb-1">
+                        <div class="col-2"></div>
+                        <div class="col-8">
+                            <h5>Medical History</h5>
+                        </div>
+                        <div class="col-2">
+                            <button type="button" class="btn">Edit</button>
+                        </div>
+                    </div>
 
                     <table class="table table-bordered">
                         <tbody>
@@ -145,7 +161,15 @@
                         </tbody>
                     </table>
 
-                    <h5>Current Medications</h5>
+                    <div class="row align-items-center g-3 mb-1">
+                        <div class="col-2"></div>
+                        <div class="col-8">
+                            <h5>Current Medications</h5>
+                        </div>
+                        <div class="col-2">
+                            <button type="button" class="btn">Edit</button>
+                        </div>
+                    </div>
 
                     <ol>
                         <li>
